--- a/Registro/app/src/main/res/layout/address_fragment.xml
+++ b/Registro/app/src/main/res/layout/address_fragment.xml
@@ -91,6 +91,7 @@
                 android:inputType="number"
                 android:singleLine="true"
                 android:hint="@string/strCpostal"
+                android:maxLength="5"
                 android:textColorHint="@color/gray"
                 android:text="09140"
                 />
@@ -113,7 +114,7 @@
                 android:maxLength="50"
                 android:hint="@string/strColonia"
                 android:textColorHint="@color/gray"
-                android:text="AMpliacion Santa Martha"
+                android:text="Ampliacion Santa Martha"
                 />
         </RelativeLayout>
         <RelativeLayout
