--- a/Registro/app/src/main/res/layout/list_item_sample.xml
+++ b/Registro/app/src/main/res/layout/list_item_sample.xml
@@ -7,24 +7,34 @@
     android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants">
 
-
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="100"
+    android:paddingBottom="10dp">
     <com.etsy.android.grid.util.DynamicHeightTextView
         android:id="@+id/txt_line1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="21sp"
+        android:layout_height="0dp"
+        android:layout_weight="50"
+        android:textSize="19sp"
         android:gravity="center"
         android:textColor="@color/green_text"
-        android:text="xxxxxxx"/>
+        android:text="nombre"/>
+    <com.etsy.android.grid.util.DynamicHeightTextView
+        android:id="@+id/txt_line2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="50"
+        android:textSize="19sp"
+        android:gravity="center"
+        android:textColor="@color/green_text"
+        android:text="nombre largo"/>
+</LinearLayout>
 
-    <ImageView
-        android:id="@+id/imgItem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/cart"
-        android:layout_gravity="bottom|right"
-        android:padding="15dp"/>
+
+
     <Button
         android:id="@+id/btn_plus"
         android:layout_width="wrap_content"
