--- a/Registro/app/src/main/res/layout/list_item_sample.xml
+++ b/Registro/app/src/main/res/layout/list_item_sample.xml
@@ -7,12 +7,11 @@
     android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants">
 
-<LinearLayout
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="100"
-    android:paddingBottom="10dp">
+    android:weightSum="100">
     <com.etsy.android.grid.util.DynamicHeightTextView
         android:id="@+id/txt_line1"
         android:layout_width="match_parent"
@@ -22,25 +21,18 @@
         android:gravity="center"
         android:textColor="@color/green_text"
         android:text="nombre"/>
-    <com.etsy.android.grid.util.DynamicHeightTextView
+    <TextView
         android:id="@+id/txt_line2"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="50"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txt_line1"
         android:textSize="19sp"
         android:gravity="center"
         android:textColor="@color/green_text"
         android:text="nombre largo"/>
-</LinearLayout>
+</RelativeLayout>
 
 
 
-    <Button
-        android:id="@+id/btn_plus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|right"
-        android:textColor="@color/white"
-        android:text="Adquirir" />
 
 </FrameLayout>
