--- a/Promotor/app/src/main/res/layout/credential_fragment.xml
+++ b/Promotor/app/src/main/res/layout/credential_fragment.xml
@@ -6,34 +6,74 @@
     android:orientation="vertical"
     android:weightSum="100"
     android:background="@color/white">
-    <RelativeLayout
-        android:id="@+id/rlImgFront"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="40"
-        android:gravity="center">
+        android:layout_weight="26"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:weightSum="100">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="60"
+            android:text="Identificacion Oficial"
+            android:textColor="@color/gray"
+            android:textSize="19sp"/>
+
         <ImageView
             android:id="@+id/imgFrontId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-            android:src="@drawable/add_photo"
-            />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/rlImgBack"
+            android:scaleType="fitCenter"
+            android:src="@drawable/add_photo"/>
+    </LinearLayout>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="40"
-        android:gravity="center" >
+        android:layout_weight="26"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:weightSum="100">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="60"
+            android:text="Comp. de Domicilio"
+            android:textColor="@color/gray"
+            android:textSize="19sp"/>
+
         <ImageView
             android:id="@+id/imgBackId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="fitXY"
+            android:scaleType="fitCenter"
             android:src="@drawable/add_photo"/>
-    </RelativeLayout>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="26"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:weightSum="100">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="60"
+            android:text="Receta Medica"
+            android:textColor="@color/gray"
+            android:textSize="19sp"/>
+
+        <ImageView
+            android:id="@+id/imgRecipe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="fitCenter"
+            android:src="@drawable/add_photo"/>
+    </LinearLayout>
+
     <LinearLayout
         android:id="@+id/llyBoton"
         android:layout_width="match_parent"
