--- a/Registro/app/src/main/res/layout/map.xml
+++ b/Registro/app/src/main/res/layout/map.xml
@@ -23,7 +23,7 @@
         android:gravity="center">
 
         <com.unstoppable.submitbuttonview.SubmitButton
-            android:id="@+id/btnSiguienteLogin"
+            android:id="@+id/btnFinishMap"
             android:layout_width="220dp"
             android:layout_height="match_parent"
             android:padding="25dp"
