--- a/Registro/app/src/main/res/layout/pay_fragment.xml
+++ b/Registro/app/src/main/res/layout/pay_fragment.xml
@@ -6,11 +6,75 @@
     android:orientation="vertical"
     android:weightSum="100"
     android:background="@color/white">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="80"
+        android:layout_weight="20"
+        android:orientation="horizontal"
+        android:weightSum="100"
+        android:gravity="center_vertical"
+
+        android:paddingLeft="20dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="30"
+            android:text="Total:"
+            android:textSize="20sp"
+            android:textColor="@color/black" />
+        <TextView
+
+            android:id="@+id/totalToPay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="50"
+            android:text="100.00"
+            android:textSize="20sp"
+            android:textColor="@color/white_transparent"  />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="10"
+        android:orientation="horizontal"
+        android:weightSum="100"
+        android:paddingLeft="20dp">
+
+        <TextView
+
+            android:id="@+id/numAccount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="50"
+            android:text="1234 5678 9876 5432"
+            android:textSize="18sp"
+            android:textColor="@color/white_transparent"  />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="10"
+        android:orientation="horizontal"
+        android:weightSum="100"
+        android:paddingLeft="20dp">
+
+        <TextView
+
+            android:id="@+id/bank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="50"
+            android:text="Banco Azteca"
+            android:textSize="18sp"
+            android:textColor="@color/white_transparent"  />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="40"
         android:gravity="center"
         android:orientation="horizontal"
         android:weightSum="100">
