--- a/Registro/app/src/main/res/layout/list_item_sample.xml
+++ b/Registro/app/src/main/res/layout/list_item_sample.xml
@@ -4,10 +4,11 @@
     android:orientation="horizontal"
     android:id="@+id/panel_content"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:descendantFocusability="blocksDescendants">
-
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <com.etsy.android.grid.util.DynamicHeightTextView
         android:id="@+id/txt_line1"
         android:layout_width="match_parent"
@@ -18,16 +19,30 @@
         android:paddingTop="15dp"
         android:textColor="@color/green_text"
         android:text="nombre"/>
+
     <TextView
         android:id="@+id/txt_line2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txt_line1"
-        android:textSize="19sp"
+        android:textSize="18sp"
         android:gravity="center_horizontal"
         android:textColor="@color/green_text"
         android:text="nombre largo"/>
 
+
+    <TextView
+        android:id="@+id/txt_line3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txt_line2"
+        android:textSize="18sp"
+        android:gravity="center_horizontal"
+        android:textColor="@color/green_text"
+        android:paddingBottom="15dp"
+        android:text="xxxx"/>
+
+</RelativeLayout>
 
 
 
