--- a/Registro/app/src/main/res/layout/pcronic_data_fragment.xml
+++ b/Registro/app/src/main/res/layout/pcronic_data_fragment.xml
@@ -39,6 +39,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/gray"/>
+
+            <com.jaredrummler.materialspinner.MaterialSpinner
+                android:id="@+id/spinnerLudic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/gray"
+                android:visibility="gone"/>
             <View
                 android:layout_below="@+id/spinner"
                 android:layout_width="match_parent"
