--- a/Registro/app/src/main/res/layout/detail_fragment.xml
+++ b/Registro/app/src/main/res/layout/detail_fragment.xml
@@ -25,11 +25,8 @@
                     android:id="@+id/bgrImage"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/background"
-                    android:scaleType="fitXY"
+                    android:scaleType="fitCenter"
                     />
-
-
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="0dp"
