--- a/Registro/app/src/main/res/layout/map.xml
+++ b/Registro/app/src/main/res/layout/map.xml
@@ -6,13 +6,23 @@
     android:orientation="vertical"
     android:weightSum="100"
     android:background="@color/white">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="80" >
+    <org.osmdroid.views.MapView
+        android:id="@+id/mapview1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tilesource="Positron" />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/alocation"
+        android:layout_centerInParent="true"/>
 
-        <org.osmdroid.views.MapView
-            android:id="@+id/mapview1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="80"
-            tilesource="Positron" />
+</RelativeLayout>
+
 
      <LinearLayout
         android:layout_width="match_parent"
@@ -21,15 +31,25 @@
         android:orientation="horizontal"
         android:padding="30dp"
         android:gravity="center">
+         <com.unstoppable.submitbuttonview.SubmitButton
+             android:id="@+id/btnChoiceMap"
+             android:layout_width="220dp"
+             android:layout_height="match_parent"
+             android:padding="25dp"
+             app:buttonText="Elegir"
+             app:buttonTextSize="25sp"
+             app:buttonColor="@color/blueBorders"
 
+             />
         <com.unstoppable.submitbuttonview.SubmitButton
             android:id="@+id/btnFinishMap"
             android:layout_width="220dp"
             android:layout_height="match_parent"
             android:padding="25dp"
-            app:buttonText="Siguiente"
+            app:buttonText="Terminar"
             app:buttonTextSize="25sp"
             app:buttonColor="@color/blueBorders"
+            android:visibility="gone"
             />
     </LinearLayout>
 </LinearLayout>
