--- a/Registro/app/src/main/res/layout/dialog_privacy.xml
+++ b/Registro/app/src/main/res/layout/dialog_privacy.xml
@@ -26,7 +26,7 @@ Sus datos personales serán utilizados para mantener el control de el registro y
 
 Se informa que no realizarán transferencias que requieran su consentimiento, salvo aquellas que sean necesarias para atender requerimientos de información de una autoridad competente, debidamente fundados y motivados.
 
-Usted podrá consultar el aviso de privacidad integral en: http:// , así como en el las instalaciones del Colectivo.
+Usted podrá solicitar el aviso de privacidad integral en  las instalaciones del Colectivo.
 "/>
 
 
