--- a/Registro/app/src/main/res/drawable/button_rounded_selector.xml
+++ b/Registro/app/src/main/res/drawable/button_rounded_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape android:shape="rectangle">
+        <shape android:shape="oval">
             <corners android:radius="3dip" />
             <solid android:color="@color/green_toolbar"/>
             <stroke android:width="1dip" android:color="@color/green_toolbar" />
