--- a/Registro/app/src/main/res/layout/toast_layout.xml
+++ b/Registro/app/src/main/res/layout/toast_layout.xml
@@ -5,12 +5,14 @@ android:orientation="horizontal"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
 android:padding="10dp"
-android:background="@drawable/button_rounded_selector" >
+android:background="@drawable/button_rounded_selector"
+    android:gravity="center">
 
 
-<TextView android:id="@+id/textToas"
+<ImageView android:id="@+id/textToas"
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
-    android:textColor="@color/green_text" />
+    android:textColor="@color/white"
+    android:src="@drawable/check"/>
 
 </LinearLayout>
