--- a/Registro/app/src/main/res/layout/healt_data_fragment.xml
+++ b/Registro/app/src/main/res/layout/healt_data_fragment.xml
@@ -31,7 +31,9 @@
             android:layout_weight="15"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+
+            android:imeOptions="actionNext">
 
             <EditText
                 android:id="@+id/edtFecha"
@@ -42,7 +44,8 @@
                 android:inputType="number"
                 android:singleLine="true"
                 android:hint="@string/strFechaNacimiento"
-                android:textColorHint="@color/gray"  />
+                android:textColorHint="@color/gray"
+                android:imeOptions="actionNext"/>
 
         </RelativeLayout>
 
@@ -120,7 +123,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="90"
-                android:textColor="@color/blueBorders"
+                android:textColor="@color/green_text"
                 android:text="¿Tienes padecimiento cronico?"/>
         </LinearLayout>
         <LinearLayout
@@ -141,7 +144,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="90"
-                android:textColor="@color/blueBorders"
+                android:textColor="@color/green_text"
                 android:text="¿Tratamiento Homeopatico?"/>
         </LinearLayout>
     </LinearLayout>
