--- a/Registro/app/src/main/res/layout/splash_screen.xml
+++ b/Registro/app/src/main/res/layout/splash_screen.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:custom="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,12 +12,18 @@
         android:layout_weight="100"
         android:background="@color/white">
         <ImageView
+            android:id="@+id/logo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/logo"
-            android:padding="50dp"
-
+            android:padding="70dp"
             android:scaleType="fitCenter"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Version : 1.3.0"
+            android:padding="25dp"
+            android:textColor="@color/green_text"/>
     </RelativeLayout>
 
 
