--- a/Registro/app/src/main/res/layout/quiz_screen.xml
+++ b/Registro/app/src/main/res/layout/quiz_screen.xml
@@ -6,31 +6,36 @@
     android:orientation="vertical"
     android:weightSum="100"
     android:background="@color/white">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="20"
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
-        android:weightSum="100">
-
+        android:weightSum="100"  >
         <TextView
-            android:id="@+id/id_product"
-            android:text="Producto adquirido:"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/gray"
-            android:padding="15dp"/>
-
-        <TextView
-            android:id="@+id/nombre"
-            android:layout_below="@+id/id_product"
+            android:id="@+id/q1"
             android:paddingLeft="30sp"
             android:textAllCaps="true"
-            android:text="NOMBRE DEL PRODUCTO"
+            android:text="¿Cuanto ha disminuido tu dolencia desde el inicio del tratamiento?"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/gray"/>
+
+        <RatingBar
+            android:id="@+id/r1"
+            style="?android:attr/ratingBarStyleIndicator"
+            android:layout_below="@+id/q1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:numStars="5"
+            android:rating="5"
+            android:stepSize="1"
+            android:progressTint="@color/green_text"
+            android:layout_centerInParent="true"
+            android:paddingTop="10dp"/>
+
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
@@ -38,87 +43,92 @@
         android:layout_weight="20"
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
-        android:weightSum="100"
-        android:gravity="center" >
+        android:weightSum="100"  >
+        <TextView
+            android:id="@+id/q2"
+            android:paddingLeft="30sp"
+            android:textAllCaps="true"
+            android:text="¿Cuanto ha disminuido tu dolencia desde el inicio del tratamiento?"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/gray"/>
 
-        <RadioGroup
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <RadioButton
-                android:id="@+id/drop"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Gotas"
-                android:textColor="@color/gray"
-                android:theme="@style/MyRadioButtonStyle"
+        <RatingBar
+            android:id="@+id/r2"
+            style="?android:attr/ratingBarStyleIndicator"
+            android:layout_below="@+id/q1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:numStars="5"
+            android:rating="5"
+            android:stepSize="1"
+            android:progressTint="@color/green_text"
+            android:layout_centerInParent="true"
+            android:paddingTop="10dp"/>
 
-                android:textSize="16sp"/>
-            <RadioButton
-                android:id="@+id/vape"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Vaporizador"
-                android:textColor="@color/gray"
-                android:theme="@style/MyRadioButtonStyle"
-                android:textSize="16sp"/>
-            <RadioButton
-                android:id="@+id/apply"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Aplicacion directa"
-                android:textColor="@color/gray"
-                android:theme="@style/MyRadioButtonStyle"
-                android:textSize="16sp"/>
-        </RadioGroup>
     </RelativeLayout>
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="40"
-        android:orientation="vertical"
-        android:weightSum="100"
-        android:gravity="center">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="55"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:orientation="horizontal" >
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/strComentario"
-
+        android:layout_weight="20"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        android:weightSum="100"  >
+        <TextView
+            android:id="@+id/q3"
+            android:paddingLeft="30sp"
+            android:textAllCaps="true"
+            android:text="¿Cuanto ha disminuido tu dolencia desde el inicio del tratamiento?"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textColor="@color/gray"/>
-        </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="20"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:orientation="horizontal"
-            android:gravity="center">
-            <RatingBar
-                android:id="@+id/valoracion"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:numStars="5"
-                android:rating="0.0"
-                android:stepSize="0.5"
-                style="@style/CustomRatingBar"
-                />
+        <RatingBar
+            android:id="@+id/r3"
+            style="?android:attr/ratingBarStyleIndicator"
+            android:layout_below="@+id/q3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:numStars="5"
+            android:rating="5"
+            android:stepSize="1"
+            android:progressTint="@color/green_text"
+            android:layout_centerInParent="true"
+            android:paddingTop="10dp"/>
 
-        </RelativeLayout>
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="20"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        android:weightSum="100"  >
+        <TextView
+            android:id="@+id/q4"
+            android:paddingLeft="30sp"
+            android:textAllCaps="true"
+            android:text="¿Cuanto ha disminuido tu dolencia desde el inicio del tratamiento?"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/gray"/>
+
+        <RatingBar
+            android:id="@+id/r4"
+            style="?android:attr/ratingBarStyleIndicator"
+            android:layout_below="@+id/q4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:numStars="5"
+            android:rating="5"
+            android:stepSize="1"
+            android:progressTint="@color/green_text"
+            android:layout_centerInParent="true"
+            android:paddingTop="10dp"/>
+
+    </RelativeLayout>
 
 
-
-    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -132,7 +142,7 @@
             android:layout_width="220dp"
             android:layout_height="match_parent"
             android:padding="25dp"
-            app:buttonText="Enviar"
+            app:buttonText="Terminar"
             app:buttonTextSize="25sp"
             app:buttonColor="@color/blueBorders"
             />
