--- a/Promotor/app/src/main/res/layout/order_fragment.xml
+++ b/Promotor/app/src/main/res/layout/order_fragment.xml
@@ -17,8 +17,8 @@
            android:id="@+id/txtTotal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
-           android:text="Total: $100.00 Mx"
-           android:textColor="@color/white"
+           android:text="JUAN CARLOS PEDROZA PEREZ"
+           android:textColor="@color/black"
            android:textSize="21sp"
            android:gravity="center_horizontal|center_vertical"/>
 
@@ -26,19 +26,55 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="80"
-        android:orientation="horizontal"
+        android:layout_weight="70"
+        android:orientation="vertical"
+        android:weightSum="100"
         android:gravity="center">
-        <com.libre.escuadronpromotor.ui.animations.DotProgressBar
-            android:id="@+id/progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/list_product"
+        <com.elyeproj.loaderviewlibrary.LoaderTextView
+            android:id="@+id/txtFecha"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone"/>
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:padding="15dp"
+            android:text="XXXXXXXXXXXXXXX"
+            app:height_weight="0.8"
+            app:use_gradient="true"
+            app:width_weight="0.6" />
 
+        <com.elyeproj.loaderviewlibrary.LoaderTextView
+            android:id="@+id/txtEstatus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:padding="15dp"
+            android:text="XXXXXXXXXXXXXXX"
+            app:height_weight="0.8"
+            app:width_weight="1.0"
+            app:corners="32" />
+
+        <com.elyeproj.loaderviewlibrary.LoaderTextView
+            android:id="@+id/txtDetalle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:padding="15dp"
+            android:text="XXXXXXXXXXXXXXX"
+            app:height_weight="0.8"
+            app:width_weight="0.4"
+            app:corners="16"
+            />
+
+        <com.elyeproj.loaderviewlibrary.LoaderTextView
+            android:id="@+id/txtProductos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:padding="15dp"
+            android:text="XXXXXXXXXXXXXXX"
+            app:height_weight="0.8"
+            app:width_weight="0.9"
+            app:corners="8"
+            app:custom_color="@android:color/holo_green_dark"/>
     </LinearLayout>
 
 
@@ -46,7 +82,7 @@
         android:id="@+id/llyBoton"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="10"
+        android:layout_weight="15"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
         android:layout_marginLeft="15dp"
@@ -54,11 +90,11 @@
         android:paddingBottom="2dp"
         android:gravity="center">
         <com.unstoppable.submitbuttonview.SubmitButton
-            android:id="@+id/btnSiguienteSignature"
+            android:id="@+id/btnFinalizar"
             android:layout_width="220dp"
             android:layout_height="match_parent"
             android:padding="25dp"
-            app:buttonText="Siguiente"
+            app:buttonText="FINALIZAR"
             app:buttonTextSize="25sp"
             app:buttonColor="@color/blueBorders"/>
 
